fixed select alignment issue

--- a/components/field/_field.scss
+++ b/components/field/_field.scss
@@ -4,6 +4,8 @@
   --field-label-color: var(--foreground);
   --field-focus-color: var(--accent);
   --field-focus-opacity: 0.15;
+  --field-border-width: 0.125rem;
+  --field-padding: 0.75rem;
 
   --reorganizeItem-background: var(--background-mid);
 }
@@ -42,6 +44,9 @@
 
   select {
     text-overflow: ellipsis;
+    color: var(
+      --field-background
+    ) !important; // to keep it "transparent" so the faux-select can keep things centered
   }
 
   .wrapper {
@@ -52,6 +57,33 @@
 
     &.overflow-visible {
       overflow: visible;
+    }
+
+    .faux-select {
+      position: absolute;
+      top: var(--field-border-width);
+      left: var(--field-border-width);
+      width: calc(100% - var(--field-border-width));
+      height: calc(100% - var(--field-border-width));
+      padding: var(--field-padding);
+      box-sizing: border-box;
+      pointer-events: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      &::after {
+        content: "";
+        width: 0.75rem;
+        height: 0.75rem;
+        box-sizing: border-box;
+        border-right: var(--field-border-width) solid var(--field-input-color);
+        border-bottom: var(--field-border-width) solid var(--field-input-color);
+        position: absolute;
+        top: 50%;
+        right: 1.5rem;
+        transform: translateY(calc(-50% - 0.25rem)) rotate(45deg);
+      }
     }
   }
 
@@ -70,7 +102,7 @@
     border-radius: var(--border-radius);
     margin: 0.5rem 0;
     position: relative;
-    border: 0.125rem solid var(--border-color);
+    border: var(--field-border-width) solid var(--border-color);
     overflow: hidden;
 
     .imagePreview {
@@ -179,7 +211,7 @@
     textarea,
     select {
       display: block;
-      padding: 0.75rem;
+      padding: var(--field-padding);
       box-sizing: border-box;
       border: 0.125rem solid var(--border-color);
       border-radius: var(--border-radius);
